--- a/public/.htaccess
+++ b/public/.htaccess
@@ -4,7 +4,7 @@
     </IfModule>
 
     RewriteEngine On
-    RewriteBase /ecommerce/public/
+    RewriteBase /public/
 
     # Handle Authorization Header
     RewriteCond %{HTTP:Authorization} .
