--- a/config/config.production.php.example
+++ b/config/config.production.php.example
@@ -12,7 +12,6 @@ define('DB_NAME', 'your_cpanel_mysql_database');
 define('BASE_URL', 'https://sivakamy.ch/');
 define('URLROOT', 'https://sivakamy.ch/');
 
-// Hide errors on production (set to true temporarily to debug 500)
-define('DISPLAY_ERRORS', false);
+// Hide errors on production
 error_reporting(0);
 @ini_set('display_errors', 0);
